CORAL-0 Table: fix sorting arrow overlapping with label

--- a/coral-component-table/src/styles/index.styl
+++ b/coral-component-table/src/styles/index.styl
@@ -359,14 +359,16 @@ table[is="coral-table"] {
 
     &:after {
       content: '';
-      background-size: 10px 12px;
+      background-size: 10px 10px;
       background-position: 50%;
       background-repeat: no-repeat;
       position: absolute;
-      height: 100%;
+      height: 10px;
       width: 10px;
       padding-left: 10px;
-      top: -1px;
+      margin-left: 10px;
+      margin-top: 1px;
+      z-index: -1;
       transition: transform 125ms ease-in-out;
     }
   }
